# C-CommApp

./: README.md
CommApp-Client/: CMakeLists.txt  comm_module.h  main.c
CommApp-Server/: CMakeLists.txt  comm_module.c  comm_module.h  main.c
